# proiecte_oop_an1

proiect 1/: CMakeLists.txt  ComplexDynamic.cpp  ComplexDynamic.h  ComplexDynamicTest.cpp  ComplexDynamicTest.h  ComplexMatrix.cpp  ComplexMatrix.h  ComplexTest.cpp  ComplexTest.h  main.cpp
proiect 1/subiectul 2/: Complex.cpp  Complex.h  ComplexMatrix.cpp  ComplexMatrix.h  main.cpp
proiect2/: Angajat.cpp  Angajat.h  CMakeLists.txt  Data.cpp  Data.h  Part_Time.cpp  Part_Time.h  Permanent.cpp  Permanent.h  main.cpp
proiect3/: CMakeLists.txt  Comanda_Online.cpp  Comanda_Online.h  Ingredient.cpp  Ingredient.h  Meniu.cpp  Meniu.h  Pizza.cpp  Pizza.h  Produs.cpp  Produs.h  main.cpp
