cmake_minimum_required(VERSION 3.27)
project(proiect3)

set(CMAKE_CXX_STANDARD 17)

add_executable(proiect3 main.cpp
        Produs.cpp
        Produs.h
        Produs.h
        Pizza.cpp
        Pizza.h
        Ingredient.cpp
        Ingredient.h
        Ingredient.h
        Comanda_Online.cpp
        Comanda_Online.h
        Meniu.cpp
        Meniu.h)
